Fix narrow image alignment issue

--- a/_sass/blocks/_two_column.scss
+++ b/_sass/blocks/_two_column.scss
@@ -95,6 +95,11 @@ p {
     margin-top: 30px;
     @include pe-responsive-breakpoint(md) {
       margin-left: 20px;
+    }
+  }
+
+  .image.narrow:first-child + .image.narrow {
+    @include pe-responsive-breakpoint(md) {
       margin-top: 0;
     }
   }
@@ -165,6 +170,6 @@ p {
         margin-top: 12px;
       }
     }
-    
+
   }
 }
